[package]
name = "cchmod"
version = "0.1.2"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "MIT"
description = "chmod calculator."
homepage = "https://github.com/Dophin2009/cchmod"
repository = "https://github.com/Dophin2009/cchmod.git"
edition = "2018"

[package.metadata]
msrv = "1.46.0"

[[bin]]
name = "cchmod"
path = "src/bin/cchmod.rs"

[dependencies]
clap = { version = "3.0", features = ["cargo", "derive"] }
doc-comment = "0.3"
thiserror = "1.0"
