[package]
name = "cchmod"
version = "0.1.3"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
license = "MIT"
description = "chmod calculator."
homepage = "https://github.com/mirryi/cchmod"
repository = "https://github.com/mirryi/cchmod.git"
edition = "2018"

[package.metadata]
msrv = "1.54.0"

[[bin]]
name = "cchmod"
path = "src/bin/cchmod.rs"

[dependencies]
clap = { version = "3.0", features = ["cargo", "derive"] }
doc-comment = "0.3"
thiserror = "1.0"
